2019-04-13 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml: Correct wrong header in ::rivet::http_accept code example

2019-04-12 Massimo Manghi <mxmanghi@apache.org>
    * INSTALL: wrong references corrected

2019-02-19 Massimo Manghi <mxmanghi@apache.org>
    * .appveyor.yml: merging from master in order to have new tags generate
    artifacts

2019-01-21 Massimo Manghi <mxmanghi@apache.org>
	* src/rivet.h: Add error message buffer size definition (was still hardcoded
	here and there)
	* src/mod_rivet_ng/rivetCore.c,rivet_worker_mpm.c: hardcoded buffer size into
	their correct macro definitions

2019-01-09 Massimo Manghi <mxmanghi@apache.org>
    * .: Released as 3.1.1

2018-12-24 Georgios Petasis <petasisg@apache.org>
    * README.md: Added badges also for the GitHub fork at:
    https://github.com/petasis/tcl-rivet.

2019-01-05 Massimo Manghi <mxmanghi@apache.org>
    * doc/rivet.xml.in,doc/rivet.xml: update copyright notice, add entities
    for various Apache resources
    * doc/xml/intro.xml: wrong attributes prevented correct link generation
    * doc/xml/installation.xml: using entities to link to resources that
    might change URL in future

2018-12-20 Massimo Manghi <mxmanghi@apache.org>
    * doc/: regenarating rivet.xml and adding new version for an example and
    several manual corrections

2018-12-20 Georgios Petasis <petasisg@apache.org>
    * cmake/CMakeLists.txt: Set policy behaviour of CMP0074, only if policy is
    defined (i.e. cmake version >= 3.12).

2018-12-19 Georgios Petasis <petasisg@apache.org>
    * cmake/CMakeLists.txt: Added support for regenerating pkgIndex.tcl in the
    installation directory of rivetlib, after files have been installed.
    This executes "tclsh".

2018-12-17 Massimo Manghi <mxmanghi@apache.org>
    * VERSION: moving version number to 3.1.1
    * mod_rivet.h: AP_USE_MODULE replicates what AP_DECLARE_DATA does 
    in mod_rivet.c but it isn't meant to stay in mod_rivet.h in the first 
    place